[ALPS07815072] arm64: dts: mediatek: add mt6765 camera
dts: Add cam_mem device node

MTK-Commit-Id: 27d73964ce4bc4b3eede7cd0a41dbdb491c02c13

Signed-off-by: chen-kuang.hsieh <chen-kuang.hsieh@mediatek.com>
CR-Id: ALPS07815072
Feature: [Android Default] Camera Application Basic Functions
Change-Id: Ibd55bd57178863eea3de1e321661c363f7b3fc91

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -3476,6 +3476,8 @@ initcall_debug=1 pelt=8";
 	imgsys@15020000 {
 		compatible = "mediatek,imgsys", "syscon";
 		reg = <0 0x15020000 0 0x1000>;
+		mediatek,larb = <&smi_larb2 &smi_larb3>;
+
 		/* Camera CCF */
 		clocks =
 			<&imgsys CLK_IMG_DIP>,
@@ -3753,6 +3755,48 @@ initcall_debug=1 pelt=8";
 		reg = <0 0x1a000000  0 0x1000>;
 		#clock-cells = <1>;
 	};
+
+	cam_mem {
+		compatible = "mediatek,cam_mem";
+		mediatek,platform = "mt6765";
+
+		iommus = /* LARB2 */
+			<&iommu M4U_PORT_CAM_IMGI>,
+			<&iommu M4U_PORT_CAM_IMG2O>,
+			<&iommu M4U_PORT_CAM_IMG3O>,
+			<&iommu M4U_PORT_CAM_VIPI>,
+			<&iommu M4U_PORT_CAM_LCEI>,
+			<&iommu M4U_PORT_CAM_FD_RP>,
+			<&iommu M4U_PORT_CAM_FD_WR>,
+			<&iommu M4U_PORT_CAM_FD_RB>,
+			<&iommu M4U_PORT_CAM_DPE_RDMA>,
+			<&iommu M4U_PORT_CAM_DPE_WDMA>,
+			<&iommu M4U_PORT_CAM_RSC_RDMA>,
+			<&iommu M4U_PORT_CAM_RSC_WDMA>,
+
+			/* LARB3 */
+			<&iommu M4U_PORT_CAM_IMGO>,
+			<&iommu M4U_PORT_CAM_RRZO>,
+			<&iommu M4U_PORT_CAM_AAO>,
+			<&iommu M4U_PORT_CAM_AFO>,
+			<&iommu M4U_PORT_CAM_LSCI0>,
+			<&iommu M4U_PORT_CAM_LSCI1>,
+			<&iommu M4U_PORT_CAM_PDO>,
+			<&iommu M4U_PORT_CAM_BPCI>,
+			<&iommu M4U_PORT_CAM_LCSO>,
+			<&iommu M4U_PORT_CAM_RSSO_A>,
+			<&iommu M4U_PORT_CAM_RSSO_B>,
+			<&iommu M4U_PORT_CAM_UFEO>,
+			<&iommu M4U_PORT_CAM_SOC0>,
+			<&iommu M4U_PORT_CAM_SOC1>,
+			<&iommu M4U_PORT_CAM_SOC2>,
+			<&iommu M4U_PORT_CAM_CCUI>,
+			<&iommu M4U_PORT_CAM_CCUO>,
+			<&iommu M4U_PORT_CAM_CACI>,
+			<&iommu M4U_PORT_CAM_RAWI_A>,
+			<&iommu M4U_PORT_CAM_RAWI_B>,
+			<&iommu M4U_PORT_CAM_CCUG>;
+		};
 
 	camsys1: camsysisp@1a000000  {
 		compatible = "mediatek,camsys", "syscon";
