[ALPS07826509] arm: dts: mt6765: Support flavors
Support 6765 flavor projects

MTK-Commit-Id: 9580fad5cb3a7772bd83b5ec665158c8aba348c7

Change-Id: I0b23f5113af9aa0c67514ba129191f77484f6ca6
Signed-off-by: ot_vishavjot.kaur <ot_vishavjot.kaur@mediatek.com>
CR-Id: ALPS07826509
Feature: Configuration

--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -1285,7 +1285,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 		compatible = "arm,sec-rng";
 	};
 
-	mobicore {
+	mobicore: mobicore {
 		compatible = "trustonic,mobicore";
 		interrupts = <GIC_SPI 271 IRQ_TYPE_EDGE_RISING 0>;
 	};
