--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -2775,6 +2775,7 @@ initcall_debug=1 pelt=8";
 			<&infracfg_ao CLK_IFR_AP_DMA>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
+		ch_offset_i2c = <0x100>;
 		mediatek,hs_only;
 	};
 
@@ -2800,6 +2801,7 @@ initcall_debug=1 pelt=8";
 			<&infracfg_ao CLK_IFR_AP_DMA>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
+		ch_offset_i2c = <0x100>;
 		mediatek,hs_only;
 	};
 
@@ -2824,6 +2826,7 @@ initcall_debug=1 pelt=8";
 			<&infracfg_ao CLK_IFR_AP_DMA>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
+		ch_offset_i2c = <0x100>;
 		mediatek,hs_only;
 	};
 
