--- a/arch/arm/boot/dts/mt6768.dts
+++ b/arch/arm/boot/dts/mt6768.dts
@@ -3667,7 +3667,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 		compatible = "mediatek,mt6768-smi-common",
 					"mediatek,smi-common", "syscon";
 		reg = <0 0x14002000 0 0x1000>;
-		mediatek,smi-id = <5>;
+		mediatek,common-id = <0>;
 		smi-common;
 		operating-points-v2 = <&opp_table_mm>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_DISP>;
@@ -3791,7 +3791,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x14003000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <0>;
+		mediatek,larb-id = <0>;
 		init-power-on;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_DISP>;
 		clocks = <&mmsys_config CLK_MM_SMI_LARB0>,
@@ -4009,7 +4009,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x15021000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <2>;
+		mediatek,larb-id = <2>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_ISP>;
 		clocks = <&mmsys_config CLK_MM_SMI_IMG>,
 				<&imgsys CLK_IMG_LARB2>;
@@ -4158,7 +4158,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 		reg = <0 0x16010000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
 		interrupts = <GIC_SPI 247 IRQ_TYPE_LEVEL_HIGH 0>;
-		mediatek,smi-id = <1>;
+		mediatek,larb-id = <1>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_VDEC>;
 		clocks = <&mmsys_config CLK_MM_SMI_VDEC>,
 				<&vdec_gcon CLK_VDEC_LARB1_CKEN>;
@@ -4219,7 +4219,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x17010000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <4>;
+		mediatek,larb-id = <4>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_VENC>;
 		clocks = <&mmsys_config CLK_MM_SMI_VENC>,
 				<&venc_gcon CLK_VENC_SET1_VENC>,
@@ -4361,7 +4361,7 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x1a002000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <3>;
+		mediatek,larb-id = <3>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_CAM>;
 		clocks = <&mmsys_config CLK_MM_SMI_CAM>,
 				<&camsys CLK_CAM_LARB3>;
