--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -3739,7 +3739,7 @@ cma=64M transparent_hugepage=never";
 		compatible = "mediatek,mt6768-smi-common",
 					"mediatek,smi-common", "syscon";
 		reg = <0 0x14002000 0 0x1000>;
-		mediatek,smi-id = <5>;
+		mediatek,common-id = <0>;
 		smi-common;
 		operating-points-v2 = <&opp_table_mm>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_DISP>;
@@ -3863,7 +3863,7 @@ cma=64M transparent_hugepage=never";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x14003000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <0>;
+		mediatek,larb-id = <0>;
 		init-power-on;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_DISP>;
 		clocks = <&mmsys_config CLK_MM_SMI_LARB0>,
@@ -4081,7 +4081,7 @@ cma=64M transparent_hugepage=never";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x15021000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <2>;
+		mediatek,larb-id = <2>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_ISP>;
 		clocks = <&mmsys_config CLK_MM_SMI_IMG>,
 				<&imgsys CLK_IMG_LARB2>;
@@ -4230,7 +4230,7 @@ cma=64M transparent_hugepage=never";
 		reg = <0 0x16010000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
 		interrupts = <GIC_SPI 247 IRQ_TYPE_LEVEL_HIGH 0>;
-		mediatek,smi-id = <1>;
+		mediatek,larb-id = <1>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_VDEC>;
 		clocks = <&mmsys_config CLK_MM_SMI_VDEC>,
 				<&vdec_gcon CLK_VDEC_LARB1_CKEN>;
@@ -4321,7 +4321,7 @@ cma=64M transparent_hugepage=never";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x17010000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <4>;
+		mediatek,larb-id = <4>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_VENC>;
 		clocks = <&mmsys_config CLK_MM_SMI_VENC>,
 				<&venc_gcon CLK_VENC_SET1_VENC>,
@@ -4462,7 +4462,7 @@ cma=64M transparent_hugepage=never";
 				"mediatek,mt6768-smi-larb", "mediatek,smi-larb";
 		reg = <0 0x1a002000 0 0x1000>;
 		mediatek,smi = <&smi_common>;
-		mediatek,smi-id = <3>;
+		mediatek,larb-id = <3>;
 		power-domains = <&scpsys MT6768_POWER_DOMAIN_CAM>;
 		clocks = <&mmsys_config CLK_MM_SMI_CAM>,
 				<&camsys CLK_CAM_LARB3>;
