[ALPS07837230] arm: dts: mt6765: dpe porting
[Detail] dpe k510 upgrade

MTK-Commit-Id: 6d5c089da4eb11d58053d77f0722df140d929f96

Signed-off-by: Ryan Teng <ryan.teng@mediatek.com>
CR-Id: ALPS07837230
Feature: [Android Default] Camera Application Basic Functions
Change-Id: I30d60a9397d4b4d18eaebab7f47298b4fcf59299

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -3537,8 +3537,18 @@ initcall_debug=1 pelt=8";
 		compatible = "mediatek,dpe";
 		reg = <0 0x15028000 0 0x1000>;
 		interrupts = <GIC_SPI 256 IRQ_TYPE_LEVEL_HIGH 0>;
+		dve_frame_done = <CMDQ_EVENT_DVE_EOF>;
+		wmfe_frame_done = <CMDQ_EVENT_WMF_EOF>;
+		power-domains =
+			<&scpsys MT6765_POWER_DOMAIN_DIS>,
+			<&scpsys MT6765_POWER_DOMAIN_ISP>;
 		clocks = <&imgsys CLK_IMG_DPE>;
 		clock-names = "DPE_CG_IMG_DPE";
+		mboxes = <&gce_mbox 13 0 CMDQ_THR_PRIO_1>;
+		iommus =
+			<&iommu M4U_PORT_CAM_DPE_RDMA>,
+			<&iommu M4U_PORT_CAM_DPE_WDMA>;
+		mediatek,larb = <&smi_larb2>;
 	};
 
 	smi_larb0: smi_larb0@14003000 {
