[ALPS07839340] arm64: dts: mt6765: porting disp
dvfsrc and interconnects issue

MTK-Commit-Id: 3bb11b9c03e1261385ed52d0731f14ec23d6d513

Change-Id: Id3f50fe63e98861568acb1fcdb03f9b83ae57432
Signed-off-by: ot_lalit.wadhwa <ot_lalit.wadhwa@mediatek.com>
CR-Id: ALPS07839340
Feature: display_mobile

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -108,8 +108,8 @@ aliases {
 #endif
 			power-domains = <&scpsys MT6765_POWER_DOMAIN_DIS>;
 			operating-points-v2 = <&opp_table_mm>;
-			//dvfsrc-vcore-supply = <&dvfsrc_vcore>;
-			interconnects = <&mmqos SLAVE_LARB(21) &mmqos SLAVE_COMMON(0)>;
+			dvfsrc-vcore-supply = <&dvfsrc_vcore>;
+			interconnects = <&dvfsrc MT6873_MASTER_MCUSYS &dvfsrc MT6873_SLAVE_DDR_EMI>;
 			interconnect-names = "disp_hrt_qos";
 
 			/* define threads, see mt6765-gce.h */
