[ALPS07839954] eMMC: add MTK_BLK_IO_BOOST config
eMMC: add MTK_BLK_IO_BOOST config

MTK-Commit-Id: 797284a88717c7e17bd107d7d218cf27593669bc

CR-Id: ALPS07839954
Feature: eMMC
Signed-off-by: lin.gui <lin.gui@mediatek.com>
Change-Id: Ie3570d60ec4024f0dcef11e5eee3de841f96a6c1

--- a/block/Kconfig
+++ b/block/Kconfig
@@ -243,3 +243,12 @@ config BLK_PM
 	def_bool BLOCK && PM
 
 source "block/Kconfig.iosched"
+
+config MTK_BLK_IO_BOOST
+	bool "block IO boost for low-end devices"
+	depends on BLOCK
+	help
+	  Enable this feature for non GKI project.
+	  It is available only for non GKI project,
+	  which revert block io request merge to
+	  improve IO performance.
