[ALPS07840502] dcm: port to 6765
port dcm to MT6765

MTK-Commit-Id: 42dfbedf9bffd6c076c45dfbf06cb6e5db518257

Signed-off-by: Sparsh Birla <sparsh.birla@mediatek.com>
CR-Id: ALPS07840502
Feature: DCM_Kernel
Change-Id: I7df3afa9fbd81b7c63a7e9b5850b3ad4508cb69c

--- a/drivers/misc/mediatek/dcm_v1/Kconfig
+++ b/drivers/misc/mediatek/dcm_v1/Kconfig
@@ -13,3 +13,11 @@ config MEDIATEK_DCM_MT6768
 	  neet to change mt6768 dcm setting. Setting will not keep after reboot
 	  Select "y" if you want to change mt6768 dcm setting.
 	  Select "n" if you do not need to change
+
+config MEDIATEK_DCM_V1
+	tristate "Mediatek MT6765 DCM control"
+	help
+	  For Mediatek MT6765 dcm HW control. Only enable when you
+	  neet to change mt6765 dcm setting. Setting will not keep after reboot
+	  Select "y" if you want to change mt6761 dcm setting.
+	  Select "n" if you do not need to change
