--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -15513,6 +15513,7 @@ FLL0_out,FLL1_out,FLL2_out,FLL4_out,FLL5_out,FLL6_out";
 			phys = <&u2port0 PHY_TYPE_USB2>;
 			phy-names = "usb2-phy";
 			usb = <&ssusb>;
+			pmic-uvlo = <&mt6363_dynamic_loading_throttling>;
 			//usb_killer_detect;
 			mt6375_otg_vbus: otg {
 				regulator-compatible = "mt6375,otg-vbus";
