[ALPS07746515] DISP: 6382 porting kernel
[Detail]:
6382 porting kernel

MTK-Commit-Id: 1e02d96d6539337968798c372b50b6446bfc9ea9

Signed-off-by: Youlin Ma <youlin.ma@mediatek.com>
CR-Id: ALPS07746515
Feature: display_mobile
Change-Id: I11c46e3c9721a5d6b6335f6dbccce6b14b6a7028

--- a/drivers/gpu/drm/mediatek/mediatek_v2/Kconfig
+++ b/drivers/gpu/drm/mediatek/mediatek_v2/Kconfig
@@ -44,3 +44,11 @@ config MTK_DISP_DEBUG
 	help
 	  Used to debug for display module, only needed by developers.
 	  The function sould be disabled in user load for security.
+
+config MTK_MT6382_BDG
+	tristate "Support Bridge IC 6382"
+	help
+	  This config decide if device with BridgeIC 6382
+	  BridgeIC 6382 can support VESA-1.2 DSC, compressing display framedata
+	  Normal project will disable it first
+	  If you are not sure about this, do not set it to y
