--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -841,6 +841,17 @@ config DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ
 	  resolution and uses 24-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
+config DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_6382
+	tristate "ALPHA JDI FHD+ DPHY vdo mode 120HZ VFP 6382 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for ALPHA JDI NT36672E
+	  DPHY vdo mode Full HD Plus 120HZ panel. The panel has a 1080x2400
+	  resolution and uses 24-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
 config DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ
 	tristate "ALPHA JDI FHD+ DPHY vdo mode 144HZ panel"
 	depends on OF
