[ALPS07746515] arm64: Configs: mt6835: 6382 porting
[Detail]
add 6382 default config

MTK-Commit-Id: 13eb6e8418abbe1e085bb286bf2fdc73112d3ec5

Signed-off-by: Youlin Ma <youlin.ma@mediatek.com>
CR-Id: ALPS07746515
Feature: display_mobile
Change-Id: I9444d2a556cc2fbd302a8191031030fb4da64333

--- a/arch/arm64/configs/mgk_64_k515_defconfig
+++ b/arch/arm64/configs/mgk_64_k515_defconfig
@@ -207,6 +207,7 @@ CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ=m
 CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_60HZ=m
 CONFIG_DRM_PANEL_SAMSUNG_S68FC01_VDO_AOD=m
 CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_HFP=m
+CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_6382=m
 CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ_HFP=m
 CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD=m
 CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD_120HZ=m
