[ALPS07709911] arm64: configs: Add CONFIG_MTK_LOAD_TRACKER_DEBUG
Add CONFIG_MTK_LOAD_TRACKER_DEBUG to avoid print trace on user load

MTK-Commit-Id: ec12ec012bedd9fe42a1c30b556c696cf1aadd77

Signed-off-by: chang.yang <chang.yang@mediatek.com>
CR-Id: ALPS07709911
Feature: DuraSpeed
Change-Id: I26abec7e60cd0bb04c5017772d1683a360a731e5

--- a/kernel/configs/eng.config
+++ b/kernel/configs/eng.config
@@ -68,3 +68,4 @@ CONFIG_MTK_PINCTRL_DEBUG=y
 CONFIG_MTK_FIX_BINDER_COMMON_ISSUE=y
 CONFIG_MTK_DISP_DEBUG=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
+CONFIG_MTK_LOAD_TRACKER_DEBUG=y
