--- a/kernel/configs/userdebug.config
+++ b/kernel/configs/userdebug.config
@@ -48,3 +48,4 @@ CONFIG_MTK_PINCTRL_DEBUG=y
 CONFIG_MTK_DISP_DEBUG=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
 CONFIG_MTK_ECCCI_DEBUG_LOG=y
+CONFIG_MTK_LOAD_TRACKER_DEBUG=y
