[ALPS07736960] arm64: dts: mt6886: enable ACC_ERR irq
enable spmi ACC_ERR irq

MTK-Commit-Id: 50964e358517273621536197d32007bb305e74f6

Signed-off-by: shangming.huang <shang-ming.huang@mediatek.com>
CR-Id: ALPS07736960
Feature: pmic_driver
Change-Id: Ic27488000735babf4623a2277e845aea9e89cddc

--- a/arch/arm64/boot/dts/mediatek/mt6886.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6886.dts
@@ -6920,7 +6920,7 @@
 			interrupt-names = "rcs_irq", "pmif_irq";
 			interrupt-controller;
 			#interrupt-cells = <1>;
-			irq_event_en = <0x80000000 0x0 0x0 0x0 0x0>;
+			irq_event_en = <0x80000000 0x0 0x0 0x1f8 0x0>;
 			swinf_ch_start = <11>;
 			ap_swinf_no = <2>;
 			#address-cells = <2>;
