[ALPS07770898] arm64: dts: mt6985: update sleep mode setting
Update sleep mode setting

MTK-Commit-Id: 788df7bfcb37a0eecb41f81235cb9aa2588ebd22

Signed-off-by: Wendell Lin <wendell.lin@mediatek.com>
CR-Id: ALPS07770898
Feature: ARM GPU DDK driver
Change-Id: I8667885df94e1161f9f2a923fca42433d6c218a6

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -8554,7 +8554,7 @@
 			#cooling-cells = <2>;
 			ged-supply = <&ged>;
 			firmware_idle_hytseresis_time_ms = <0>;
-			sleep-mode-enable = <0>;
+			sleep-mode-enable = <0xff>;
 			pending-submission-mode = <1>;
 			default-glb-pwroff-timeout-us = <300>;
 		};
