msm: npu: Add NPU driver support for msm-5.15
NPU driver snapshot from msm-5.4 branch
commit f4eda71b2aae ("msm: npu: add vote for required interconnects").

Change-Id: Ic75b187f6a6883e3de3a33ed1888020741f60413
Signed-off-by: xiaoweig <quic_xiaoweig@quicinc.com>

--- a/drivers/media/platform/msm/npu/Makefile
+++ b/drivers/media/platform/msm/npu/Makefile
@@ -1,3 +1,14 @@
 # SPDX-License-Identifier: GPL-2.0-only
 
+ifneq ($(CONFIG_VIRTIO_NPU),)
 obj-$(CONFIG_VIRTIO_NPU) := virtio_npu.o
+else
+msm_npu-objs := npu_dbg.o \
+                npu_dev.o \
+                npu_debugfs.o \
+                npu_host_ipc.o \
+                npu_hw_access.o \
+                npu_mgr.o
+
+obj-$(CONFIG_MSM_NPU) := msm_npu.o
+endif
