--- a/drivers/media/platform/msm/npu/Kconfig
+++ b/drivers/media/platform/msm/npu/Kconfig
@@ -5,3 +5,13 @@ config VIRTIO_NPU
 	help
 	  This is the virtual frontend driver for Neural Processing Unit
 	  based on virtio. Say Y if you want to support virtual NPU.
+
+config MSM_NPU
+	tristate "QTI MSM Neural Processing Unit support"
+	depends on ARCH_QCOM
+	help
+	  Enable support for Neural Processing Unit
+	  for specific QTI chipsets.
+	  This module serves as the common driver
+	  for npu which provides acceleration for neural
+	  network processing.
