--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -10,6 +10,15 @@ menuconfig QCOM_POWER_SUPPLY
 
 if QCOM_POWER_SUPPLY
 
+config QPNP_QNOVO5
+	tristate "QPNP QNOVO5 driver"
+	depends on MFD_SPMI_PMIC
+	help
+	  Say Y here to enable the Qnovo5 PBS-based pulse charging engine.
+	  Qnovo5 driver accepts pulse parameters via sysfs entries and programs
+	  the hardware module. It also allows userspace code to read diagnostics
+	  of voltage and current measured during certain phases of the pulses.
+
 config QPNP_QG
 	tristate "QPNP Qgauge driver"
 	depends on MFD_SPMI_PMIC
