--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -83,6 +83,18 @@ config SMB1355_SLAVE_CHARGER
 	  The driver reports the charger status via the power supply framework.
 	  A charger status change triggers an IRQ via the device STAT pin.
 
+config SMB1390_CHARGE_PUMP_PSY
+	tristate "SMB1390 power supply framework based driver"
+	depends on MFD_I2C_PMIC && IIO
+	help
+	  Say Y to include support for SMB1390 Charge Pump driver based on
+	  power supply framework.
+	  SMB1390 is a div2 charge pump capable of delivering 6A charge current
+	  with very high efficiency. It can work either as 2s to 1s pre-regulator
+	  or as a companion charger when paired with Qualcomm Technologies, Inc.’s
+	  family of standalone chargers to enable a high current, low profile
+	  Li+ battery charging system.
+
 config SMB23X_CHARGER
 	tristate "SMB23X Battery Charger"
 	depends on I2C
