[ALPS07842020] eem : add picachu
picachu support was added

MTK-Commit-Id: 97de77a0861d6874475cad91ca1b4dd886a955ee

Signed-off-by: Devashish Patwal <devashish.patwal@mediatek.com>
CR-Id: ALPS07842020
Feature: cpu_ptpod
Change-Id: I0158a1d42e41c9a2c150a7209c52a1ffc72e6842

--- a/drivers/misc/mediatek/eem_v2/Makefile
+++ b/drivers/misc/mediatek/eem_v2/Makefile
@@ -70,13 +70,14 @@ mediatek_eem-y += common_v2/mtk_eem.o
 mediatek_eem-y += common_v2/mtk_eem_platform.o
 mediatek_eem-y += common_v2/mtk_eem_internal.o
 mediatek_eem-y += common_v2/mtk_eem_api.o
-
+obj-$(CONFIG_MTK_PTPOD_LEGACY) += mtk_picachu.o
+mtk_picachu-y += common_v2/mtk_picachu.o
 else ifneq ($(strip $(CONFIG_MTK_PLAT_POWER_MT6833)),)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/eem_v2/common_v3/inc
 obj-$(CONFIG_MTK_PTPOD_LEGACY) += mediatek_eem.o
 mediatek_eem-y += common_v3/mtk_eem.o
 mediatek_eem-y += common_v3/mtk_eem_platform.o
 mediatek_eem-y += common_v3/mtk_eem_internal.o
-obj-m += mtk_picachu.o
+obj-$(CONFIG_MTK_PTPOD_LEGACY) += mtk_picachu.o
 mtk_picachu-y += common_v3/mtk_picachu.o
 endif
