--- a/arch/arm/boot/dts/cust_mt6765_msdc.dtsi
+++ b/arch/arm/boot/dts/cust_mt6765_msdc.dtsi
@@ -142,6 +142,7 @@
 	sd-uhs-sdr50;
 	sd-uhs-sdr104;
 	sd-uhs-ddr50;
+	cd-debounce-delay-ms = <0>;
 	cd-gpios = <&pio 1 GPIO_ACTIVE_LOW>;
 	vmmc-supply = <&mt_pmic_vmch_ldo_reg>;
 	vqmmc-supply = <&mt_pmic_vmc_ldo_reg>;
@@ -183,6 +184,7 @@
 				<PINMUX_GPIO30__FUNC_MSDC1_CMD>;
 			input-enable;
 			drive-strength = <3>;
+			bias-pull-up = <MTK_PUPD_SET_R1R0_01>;
 		};
 
 		pins_clk {
