[ALPS07823344] arm64: dts: mt6765: add vcore supply in dvfsrc-helper
add vcore-supply buck reg in dvfsrc-helper.

MTK-Commit-Id: 8de1b42dd1bafca0b84ed7c6b2ad9c596ea49a14

Change-Id: I75b59f074bf13470de3f58056ab58132be8017e5
Signed-off-by: virendra.upadhyay <virendra.upadhyay@mediatek.com>
Feature: VCORE DVFS
CR-Id: ALPS07823344

--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -1586,6 +1586,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 
 		dvfsrc-helper {
 			compatible = "mediatek,dvfsrc-helper";
+			vcore-supply = <&mt_pmic_vcore_buck_reg>;
 			rc-vcore-supply = <&dvfsrc_vcore>;
 			rc-vscp-supply = <&dvfsrc_vscp>;
 			interconnects = <&dvfsrc MT6873_MASTER_DBGIF &dvfsrc MT6873_SLAVE_DDR_EMI>,
