--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -1583,6 +1583,7 @@ initcall_debug=1 pelt=8";
 
 		dvfsrc-helper {
 			compatible = "mediatek,dvfsrc-helper";
+			vcore-supply = <&mt_pmic_vcore_buck_reg>;
 			rc-vcore-supply = <&dvfsrc_vcore>;
 			rc-vscp-supply = <&dvfsrc_vscp>;
 			interconnects = <&dvfsrc MT6873_MASTER_DBGIF &dvfsrc MT6873_SLAVE_DDR_EMI>,
