[ALPS07823344] arm64: dts: mt6765: cm_mgr interconnect field
added cm_mgr interconnect fields in cm_mgr node
for interconnect uses in k510.

MTK-Commit-Id: 7e8a0ee7cc01772ecdeec7b20581b0941ba7c0b7

Change-Id: I141a842e787cb2852ac5fb71b75274e59fe850e3
Signed-off-by: virendra.upadhyay <virendra.upadhyay@mediatek.com>
Feature: CGM(CPU/GPU Memory Latency Management)
CR-Id: ALPS07823344

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -4499,6 +4499,8 @@ initcall_debug=1 pelt=8";
 		compatible = "mediatek,mt6765-cm_mgr";
 		reg = <0 0x10200000 0 0x4000>;
 		reg-names = "cm_mgr_base";
+		interconnects = <&dvfsrc MT6873_MASTER_MCUSYS &dvfsrc MT6873_SLAVE_DDR_EMI>;
+		interconnect-names = "cm-perf-bw";
 		required-opps = <&dvfsrc_freq_opp0>,
 				<&dvfsrc_freq_opp1>,
 				<&dvfsrc_freq_opp2>;
