[ALPS07844677] arm64: dts: mt6765: mmdvfs/qos free run
[Details]
mmdvfs/qos free run

MTK-Commit-Id: 8e54180578a3ff98e9517d7dc7583c1aa589abf2

Change-Id: Ic055d14b1f5c15961522cb94e46c83a1d8edee13
CR-Id: ALPS07844677
Signed-off-by: ot_devendra.balihar <ot_devendra.balihar@mediatek.com>
Feature: mmdvfs

--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -4044,6 +4044,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 		reg = <0 0x14002000 0 0x1000>;
 		mediatek,smi-id = <4>;
 		smi-common;
+		operating-points-v2 = <&opp_table_mm>;
 		power-domains = <&scpsys MT6765_POWER_DOMAIN_DIS>;
 		clocks = <&mmsys_config CLK_MM_SMI_COMM0>,
 			<&mmsys_config CLK_MM_SMI_COMM1>,
