--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -3441,6 +3441,7 @@ initcall_debug=1 pelt=8";
 		reg = <0 0x14002000 0 0x1000>;
 		mediatek,smi-id = <4>;
 		smi-common;
+		operating-points-v2 = <&opp_table_mm>;
 		power-domains = <&scpsys MT6765_POWER_DOMAIN_DIS>;
 		clocks = <&mmsys_config CLK_MM_SMI_COMM0>,
 			<&mmsys_config CLK_MM_SMI_COMM1>,
