[ALPS07713732] arm64: dts: mt6833: update config for sec-rng
Update  sec-rng nodes

MTK-Commit-Id: 1bbdb467731dc426b0247db381e1bbcf3cb63329

CR-Id: ALPS07713732
Feature: Platform Security
Change-Id: I09aad2c638132243c7c97bc9f2e49cda85084c86
Signed-off-by: mufaddal.ali <mufaddal.ali@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6833.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6833.dts
@@ -1893,6 +1893,9 @@
 
 	hwrng: hwrng {
 		compatible = "arm,sec-rng";
+		methods = "smc";
+		method-fid = /bits/ 16 <0x26a>;
+		quality = /bits/ 16 <900>;
 	};
 
 	/* Trustonic Mobicore SW IRQ number 115 = 32 + 83 */
