[ALPS07833243] arm64: dts: mt6765: add entry for transparent_hugepage
add entry in dts file mt6765, add transparent_hugepage=never in bootargs

MTK-Commit-Id: 1118ee763311d2171a474d38d0a56f1fac0c7e74

Change-Id: Idbbfa59dd1b81da1d977830b9fce01e672dc3831
Signed-off-by: ot_ravi-rk.kumar <ot_ravi-rk.kumar@mediatek.com>
CR-Id: ALPS07833243
Feature: Configuration

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -465,6 +465,7 @@ earlycon=uart8250,mmio32,0x11002000 \
 8250.nr_uarts=4 \
 page_owner=on \
 swiotlb=noforce androidboot.hardware=mt6765 \
+transparent_hugepage=never \
 maxcpus=8 loop.max_part=7 \
 firmware_class.path=/vendor/firmware \
 initcall_debug=1 pelt=8";
