[ALPS07823677] arm64: dts: mt6765: add dvfsrc-vcore source
[Detail]
add dvfsrc-vcore source to set the voltage using dvfsrc-vcore

MTK-Commit-Id: e09f878722fbc4450e83f5b2ed8c23f501341cc5

CR-Id: ALPS07823677
Feature: MFGSYS driver
Change-Id: I2e2a858ad4924384155a51840f18e97dd3e3c541
Signed-off-by: kuldeep.chaudhary <kuldeep.chaudhary@mediatek.com>

--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -4006,6 +4006,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 		nvmem-cells = <&efuse_segment>;
 		nvmem-cell-names = "efuse_segment_cell";
 		vcore-supply = <&mt_pmic_vcore_buck_reg>;
+		dvfsrc-vcore-supply = <&dvfsrc_vcore>;
 	};
 
 	gpufreq_wrapper: gpufreq_wrapper {
