--- a/drivers/gpu/mediatek/gpufreq/v2/Makefile
+++ b/drivers/gpu/mediatek/gpufreq/v2/Makefile
@@ -23,6 +23,7 @@ ccflags-y += -I$(srctree)/drivers/misc/mediatek/pbm/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/aee/aed/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/leakage_table_v2/
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/thermal/v2/inc/mach/
 
 ccflags-y += \
 	-Wno-unused-variable \
