[ALPS07853835] arm: dts: mt6765: correct pmu config
Correct PMU compatible config for arm

MTK-Commit-Id: 27009b44e0ee516fcbea16e22e0559d41a675bdf

Change-Id: Ibdeef308549245af82f2d4b5400f654215bef429
Signed-off-by: Ben Niu <ben.niu@mediatek.com>
CR-Id: ALPS07853835
Feature: Configuration

--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -905,7 +905,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 	};
 
 	pmu {
-		compatible = "arm,armv8-pmuv3";
+		compatible = "arm,cortex-a7-pmu";
 		interrupt-parent = <&gic>;
 		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW 0>;
 	};
