[ALPS07853835] arm: dts: mt6768: correct pmu config
Correct PMU compatible config for arm

MTK-Commit-Id: 6d0441dad95dea60dc71cc99f690812adf931e57

Change-Id: Ib6f569f7b1389035f47e5fbc60f716d681b5f2fc
Signed-off-by: Ben Niu <ben.niu@mediatek.com>
CR-Id: ALPS07853835
Feature: Configuration

--- a/arch/arm/boot/dts/mt6768.dts
+++ b/arch/arm/boot/dts/mt6768.dts
@@ -899,16 +899,9 @@ cma=64M transparent_hugepage=never clk_ignore_unused=1";
 	};
 
 	pmu {
-		compatible = "arm,armv8-pmuv3";
+		compatible = "arm,cortex-a7-pmu";
 		interrupt-parent = <&gic>;
-		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW &ppi_cluster0>;
-	};
-
-	dsu-pmu-0 {
-		compatible = "arm,dsu-pmu";
-		interrupts = <GIC_SPI 18 IRQ_TYPE_LEVEL_HIGH 0>;
-		cpus = <&cpu0>, <&cpu1>, <&cpu2>, <&cpu3>,
-			<&cpu4>, <&cpu5>, <&cpu6>, <&cpu7>;
+		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW 0>;
 	};
 
 	reserved_memory: reserved-memory {
