[ALPS07835787] arm64: dts: mt6765: 6357 charger type
Add/enable 6357 charger type detection

MTK-Commit-Id: d3d711186e5ec8c05061e951535d9f0941c22e26

Change-Id: Ifae3afa9dc45e8ff1e78ecfa8d1324c183b144d7
CR-Id: ALPS07835787
Feature: Charger
Signed-off-by: ot_sumitra.dwivedi <ot_sumitra.dwivedi@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -1450,7 +1450,7 @@ initcall_debug=1 pelt=8";
 
 			mtk_gauge: mtk_gauge {
 				compatible = "mediatek,mt6357-gauge";
-				charger = <&mt6370_chg>;
+				charger = <&mtk_charger_type>;
 				bootmode = <&chosen>;
 				io-channels = <&pmic_auxadc AUXADC_BAT_TEMP>,
 						<&pmic_auxadc AUXADC_BATADC>,
@@ -4229,7 +4229,7 @@ initcall_debug=1 pelt=8";
 	charger: charger {
 		compatible = "mediatek,charger";
 		gauge = <&mtk_gauge>;
-		charger = <&mt6370_chg>;
+		charger = <&mtk_charger_type>;
 		bootmode = <&chosen>;
 		pmic = <&main_pmic>;
 
@@ -4283,8 +4283,8 @@ initcall_debug=1 pelt=8";
 
 	mtk_ctd: mtk_ctd {
 		compatible = "mediatek,mtk_ctd";
-		bc12 = <&mt6370_chg>;
-		bc12_sel = <0>;
+		bc12 = <&mtk_charger_type>;
+		bc12_sel = <1>;
 	};
 
 	pd_adapter: pd_adapter {
@@ -4294,7 +4294,7 @@ initcall_debug=1 pelt=8";
 
 	extcon_usb: extcon_usb {
 		compatible = "mediatek,extcon-usb";
-		charger = <&mt6370_chg>;
+		charger = <&mtk_charger_type>;
 		vbus-supply = <&otg_vbus>;
 		vbus-voltage = <5000000>;
 		vbus-current = <1800000>;
@@ -4593,5 +4593,13 @@ initcall_debug=1 pelt=8";
 /* for md pmic voltage setting*/
 	md_vmodem-supply = <&mt_pmic_vmodem_buck_reg>;
 	md_vmodem = <800000 800000>;
+};
+
+&mt6370_chg {
+	charger = <&mtk_charger_type>; /*mt6370 get online status*/
+};
+
+&mtk_charger_type {
+	charger = <&mt6370_chg>; /*mt6357 get charger status*/
 };
 
